fix page title padding on mobile

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -105,11 +105,9 @@
 .header__mobile-menu-button {
   display: none;
   width: 30px;
-  align-items: center;
-  justify-content: center;
 
   @media (max-width: $mobile) {
-    display: flex;
+    display: block;
   }
 
   .line {
